--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kleveron1.0</title>
-  <base href="/">
+  <base href="/kleveron1.0/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="./assets/images/fav.ico" />
 <script src="./assets/js/jquery-1.11.3.min.js"></script>
