--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Kleveron1.0</title>
-  <base href="/kleveron1.0/">
+  <base href="/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="./assets/images/fav.ico" />
+<link id="theme2" href="./assets/styles/responsive.css" rel="stylesheet" >
+<link id="theme" href="./assets/styles/style.css" rel="stylesheet" >
 <script src="./assets/js/jquery-1.11.3.min.js"></script>
 <script src="./assets/js/bootstrap.min.js"></script>
 <script src="./assets/js/jquery-ui.js"></script>
