--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="./assets/js/bootstrap-datetimepicker.min.js"></script>
 <link id="theme" href="./assets/styles/style.css" rel="stylesheet" >
 <link id="theme2" href="./assets/styles/responsive.css" rel="stylesheet" > 
+<link id="color" href="./assets/styles/style.css" rel="stylesheet" >
 
 </head>
 <body>
