--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,8 @@
 <script src="./assets/js/perfect-scrollbar.js"></script>
 <script src="./assets/js/perfect-scrollbar.jquery.js"></script>
 <script src="./assets/js/bootstrap-datetimepicker.min.js"></script>
-<link id="theme" href="./assets/styles/style.css" rel="stylesheet" >
-<link id="theme2" href="./assets/styles/responsive.css" rel="stylesheet" > 
-
+<link id="theme" href="./assets/styles/left-menu.css" rel="stylesheet" >
+<link id="color" href="./assets/styles/orange-blue.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
