--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kleveron1.0</title>
-  <base href="https://adibro500.github.io/kleveron1.0/">
+  <base href="/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="./assets/images/fav.ico" />
 <script src="./assets/js/jquery-1.11.3.min.js"></script>
@@ -16,7 +16,7 @@
 <link id="theme" href="./assets/styles/style.css" rel="stylesheet" >
 <link id="theme2" href="./assets/styles/responsive.css" rel="stylesheet" > 
 <link id="color" href="./assets/styles/style.css" rel="stylesheet" >
-
+<link id="logo" href="./assets/styles/default-logo.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
