--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 <script src="./assets/js/bootstrap-datetimepicker.min.js"></script>
 <link id="theme" href="./assets/styles/left-menu.css" rel="stylesheet" >
 <link id="color" href="./assets/styles/orange-blue.css" rel="stylesheet">
+<link id="logo" href="./assets/styles/default-logo.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
