--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 
 <!-- A DevExtreme library -->
 <script type="text/javascript" src="./node_modules/devextreme/dist/js/dx.all.js"></script>
-
+<script src="./node_modules/table-dragger/dist/table-dragger.min.js"></script>
 
 
 </head>
