changes in admin-input

--- a/src/index.html
+++ b/src/index.html
@@ -17,39 +17,15 @@
 <link id="theme" href="./assets/styles/left-menu.css" rel="stylesheet" >
 <link id="color" href="./assets/styles/orange-blue.css" rel="stylesheet">
 <link id="logo" href="./assets/styles/default-logo.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./node_modules/primeng/resources/primeng.min.css" />
 <script src="./assets/js/modernizr.js"></script>
 <script src="./assets/js/owl.carousel.js"></script>
 <script src="./assets/js/owl.carousel.min.js"></script>
 
 
-<!-- Reference either Knockout or AngularJS, if you do -->
-<script type="text/javascript" src="./node_modules/knockout/build/output/knockout-latest.js"></script>
-<script type="text/javascript" src="./node_modules/angular/angular.min.js"></script>
-
-<!-- Reference Globalize if you need to localize app or your app uses custom date, number or currency formatting --> 
-<script type="text/javascript" src="./node_modules/cldrjs/dist/cldr.js"></script>
-<script type="text/javascript" src="./node_modules/cldrjs/dist/cldr/event.js"></script>
-<script type="text/javascript" src="./node_modules/cldrjs/dist/cldr/supplemental.js"></script>
-<script type="text/javascript" src="./node_modules/globalize/dist/globalize.js"></script>
-<script type="text/javascript" src="./node_modules/globalize/dist/globalize/message.js"></script>
-<script type="text/javascript" src="./node_modules/globalize/dist/globalize/number.js"></script>
-<script type="text/javascript" src="./node_modules/globalize/dist/globalize/currency.js"></script>
-<script type="text/javascript" src="./node_modules/globalize/dist/globalize/date.js"></script>
-
-<!-- Reference the JSZip script if you need client-side exporting -->
-<script type="text/javascript" src="./node_modules/jszip/dist/jszip.js"></script>
-
-<!-- DevExtreme themes -->
-<link rel="stylesheet" type="text/css" href="./node_modules/devextreme/dist/css/dx.common.css" />
-<link rel="stylesheet" type="text/css" href="./node_modules/devextreme/dist/css/dx.light.css" />
-<link rel="dx-theme" data-theme="generic.light.compact" href="https://cdn3.devexpress.com/jslib/17.2.3/css/dx.light.compact.css" />
-
-<!-- A DevExtreme library -->
-<script type="text/javascript" src="./node_modules/devextreme/dist/js/dx.all.js"></script>
-<script src="./node_modules/table-dragger/dist/table-dragger.min.js"></script>
 
 
+
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
