--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <script src="./assets/js/moment-with-locales.min.js"></script>
 <script src="./assets/js/perfect-scrollbar.js"></script>
 <script src="./assets/js/perfect-scrollbar.jquery.js"></script>
+
 <script src="./assets/js/bootstrap-datetimepicker.min.js"></script>
+
 <link id="theme2" href="./assets/styles/responsive.css" rel="stylesheet" > 
 <link id="logo" href="./assets/styles/default-logo.css" rel="stylesheet">
 <link id="theme" href="./assets/styles/left-menu.css" rel="stylesheet" >
@@ -20,6 +22,7 @@
 <link id="logo" href="./assets/styles/default-logo.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+   
+  <app-root>Loading...</app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
